Fix WC pagination spacing

--- a/sass/woocommerce/_menus.scss
+++ b/sass/woocommerce/_menus.scss
@@ -53,7 +53,7 @@
 				.next,
 				.prev {
 					font-size: 14px; 
-					padding: 12px 14.3px 12px;
+					padding: 12px 14.3px 11px;
 					
 					span:before {
 						position: relative;
